# small-automation-tools

./: .gitignore  README.md  main.py  pyproject.toml  tools.py
.github/scripts/: build.py
apps/: importació.py  resum.py
apps/public/: importació.bat
scripts/: README.md  pyproject.toml
scripts/importació/: importació.py
templates/: tailwind.html.j2
