[project]
name = "small-automation-tools"
version = "0.1.0"
description = "Set of small automation tools for school billing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.14.10",
    "numpy>=2.3.1",
    "polars>=1.31.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "ruff>=0.12.3",
]

[tool.uv.workspace]
members = [
    "scripts",
]

[tool.mypy]
exclude = ["templates"]